
[package]
name = "stgn-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
stgn = { path = "../stgn" }
wasm-bindgen = "0.2"
image = "0.25"
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1"
base64 = "0.22"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
postcard = { version = "1.1.3", features = ["alloc"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }