[package]
name = "stgn"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "stgn"
path = "src/main.rs"

[lib]
name = "stgn"
path = "src/lib.rs"

[dependencies]
aes-gcm = "0.10.3"
image = "0.25.10"
postcard = { version = "1.1.3", features = ["alloc"] }
serde = "1.0.228"
tracing = "0.1.44"
tracing-subscriber = "0.3.19"

flate2 = "1.0"
lopdf = "0.40.0"
